src/pages/SignUp/SignUp.css
/* SignUp Card Wrapper Styles */

.signup-section {
  padding: 10rem 0;
}

/* Signup Card styles */

.signup-card-wrapper {
  height: fit-content;
  width: 25rem;
  margin: 1rem;
  transition: 0.4s ease-in;
}

.signup-card-wrapper:hover {
  cursor: pointer;
  transform: scale(1.05);
}

/* Input styles */

#first-name-input,
#last-name-input,
#confirm-password-input {
  width: 100%;
  border: 2px solid var(--border-color);
  outline: none;
  border-radius: 5px;
  padding: 5px;
  margin: 1rem 0;
  font-size: 1rem;
}

#first-name-input:focus {
  border: 2px solid var(--primary-color);
}

#last-name-input:focus {
  border: 2px solid var(--primary-color);
}

#confirm-password-input:focus {
  border: 2px solid var(--primary-color);
}

button[disabled] {
  cursor: not-allowed;
}

.password-match {
  color: red;
}

